--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "pnpm run start",
+    "lint": "eslint . --ext .ts,.tsx --max-warnings 0",
     "typescript": "tsc --noEmit",
     "build": "pnpm run swagger && pnpm run typescript && NODE_OPTIONS=--max-old-space-size=8192 vite build",
     "preview": "vite preview",
@@ -43,9 +44,16 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/styled-components": "^5.1.36",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.0.0",
     "cypress": "^13.0.0",
     "cypress-vite": "^1.4.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "less": "^4.1.3",
     "typescript": "^4.9.3",
     "vite": "^4.3.9",
