--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
   "type": "module",
   "scripts": {
     "dev": "pnpm run start",
-    "lint": "eslint . --ext .ts,.tsx --max-warnings 0",
-    "typescript": "tsc --noEmit",
-    "build": "pnpm run swagger && pnpm run typescript && NODE_OPTIONS=--max-old-space-size=8192 vite build",
-    "preview": "vite preview",
-    "start": "vite",
+    "lint": "eslint . --ext .ts,.tsx --max-warnings 0 -c src/ui/config/eslint.config.json",
+    "typescript": "tsc -p src/ui/config/tsconfig.json --noEmit",
+    "build": "pnpm run swagger && pnpm run typescript && NODE_OPTIONS=--max-old-space-size=8192 vite build -c src/ui/config/vite.config.ts",
+    "preview": "vite preview -c src/ui/config/vite.config.ts",
+    "start": "vite -c src/ui/config/vite.config.ts",
     "ci": "rm -rf node_modules && pnpm install --frozen-lockfile",
     "amp": "APP_ID=\"${APP_ID}\" ENV=\"${ENV}\" amplify/pull.sh",
     "clean": "rm -rf node_modules && rm -rf src/.umi",
     "swagger": "swagger-cli bundle -o src/ui/gen/swagger.json src/api/spec/swagger.yaml",
-    "visualize": "vite-bundle-visualizer -t treemap --open -o ${PWD}/stats.html",
-    "test:open": "dotenv -e config.env -- npx cypress open",
-    "test": "dotenv -e config.env -- npx cypress run"
+    "visualize": "vite-bundle-visualizer -c src/ui/config/vite.config.ts -t treemap --open -o ${PWD}/stats.html",
+    "test:open": "dotenv -e config.env -- npx cypress open --config-file src/ui/config/cypress.config.ts",
+    "test": "dotenv -e config.env -- npx cypress run --config-file src/ui/config/cypress.config.ts"
   },
   "author": "Krish Suchak <suchak.krish@gmail.com>",
   "license": "MIT",
