--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -68,7 +68,7 @@ jobs:
           STRIPE_WEBHOOK_SECRET: secret
           STRIPE_PRICE_ID: ${{ secrets.DEV_STRIPE_PRICE_ID }}
           STRIPE_SECRET_KEY: ${{ secrets.DEV_STRIPE_SECRET_KEY }}
-        run: make test-db
+        run: make test
 
       - name: Create parameters.env [${{ fromJSON('["dev","prod"]')[github.ref_name == 'master'] }}]
         env:
